--- a/hlk_ld2402_minimal.yaml
+++ b/hlk_ld2402_minimal.yaml
@@ -1,15 +1,26 @@
-# Minimal configuration for HLK-LD2402 radar sensor
-# This configuration includes only the essential sensors for everyday use
+# ========================================
+# ⚡ МИНИМАЛЬНАЯ КОНФИГУРАЦИЯ HLK-LD2402
+# ========================================
+# Используйте для повседневного использования
+# после завершения калибровки.
+#
+# Включает только необходимые датчики:
+# - Присутствие
+# - Микродвижения
+# - Расстояние
+# - Помехи по питанию
+# - Базовые кнопки управления
+# ========================================
 
-# Basic ESPHome settings - customize these for your device
+# Базовые настройки ESPHome - настройте под своё устройство
 esphome:
   name: radar-sensor
-  friendly_name: Radar Sensor
+  friendly_name: Датчик Радара
 
 esp32:
   board: esp32dev
 
-# Enable Home Assistant API
+# Включаем API Home Assistant
 api:
   encryption:
     key: !secret api_encryption_key
@@ -21,7 +32,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
-  # Enable fallback hotspot in case WiFi connection fails
+  # Включаем резервную точку доступа при сбое WiFi
   ap:
     ssid: "Radar-Sensor Fallback"
     password: !secret fallback_password
@@ -29,21 +40,21 @@ wifi:
 logger:
   level: INFO
 
-# UART configuration for HLK-LD2402
+# Конфигурация UART для HLK-LD2402
 uart:
   id: uart_bus
-  tx_pin: GPIO1  # TX0 hardware UART
-  rx_pin: GPIO3  # RX0 hardware UART
+  tx_pin: GPIO1 # TX0 аппаратный UART
+  rx_pin: GPIO3 # RX0 аппаратный UART
   baud_rate: 115200
   data_bits: 8
   parity: NONE
   stop_bits: 1
 
-# HLK-LD2402 radar component
+# Компонент радара HLK-LD2402
 external_components:
   - source:
       type: git
-      url: https://github.com/mouldybread/hlk_ld2402_esphome
+      url: https://github.com/mihazzz123/hlk_ld2402_esphome.git
     refresh: 0ms
 
 hlk_ld2402:
@@ -52,56 +63,56 @@ hlk_ld2402:
   max_distance: 5.0
   timeout: 5
 
-# Binary sensors - only essential ones
+# Бинарные датчики - только основные
 binary_sensor:
-  # Presence detection - shows if someone is present in the detection area
+  # Обнаружение присутствия - показывает, есть ли кто-то в зоне обнаружения
   - platform: hlk_ld2402
     id: radar_presence
-    name: "Presence"
+    name: "Присутствие"
     device_class: presence
     hlk_ld2402_id: radar_sensor
 
-  # Micromovement detection - shows if small movements are detected
+  # Обнаружение микродвижений - показывает, обнаружены ли малые движения
   - platform: hlk_ld2402
     id: radar_micromovement
-    name: "Micromovement"
+    name: "Микродвижения"
     device_class: motion
     hlk_ld2402_id: radar_sensor
-  
-  # Power interference detection - shows if power supply is causing interference
+
+  # Обнаружение помех по питанию - показывает, вызывает ли источник питания помехи
   - platform: hlk_ld2402
     id: radar_power_interference
-    name: "Radar Power Interference"
+    name: "Помехи по питанию"
     device_class: problem
     power_interference: true
     hlk_ld2402_id: radar_sensor
 
-# Distance sensor - shows how far away the detected person is
+# Датчик расстояния - показывает, как далеко находится обнаруженный человек
 sensor:
   - platform: hlk_ld2402
     id: radar_distance
-    name: "Distance"
+    name: "Расстояние"
     hlk_ld2402_id: radar_sensor
     device_class: distance
-    unit_of_measurement: "cm"
+    unit_of_measurement: "см"
     accuracy_decimals: 1
-    throttle: 2000ms  # 2 second throttle for smoother readings
+    throttle: 2000ms # Интервал 2 секунды для более плавных показаний
 
-# Only include essential calibration button
+# Включаем только основную кнопку калибровки
 button:
   - platform: template
-    name: "Calibrate"
+    name: "Калибровка"
     icon: "mdi:radar"
     on_press:
       - lambda: id(radar_sensor).calibrate();
 
-  # Save button for after calibration or threshold changes
+  # Кнопка сохранения после калибровки или изменения порогов
   - platform: template
-    name: "Save Config"
+    name: "Сохранить конфигурацию"
     icon: "mdi:content-save"
     on_press:
       - lambda: id(radar_sensor).save_config();
 
-# Optional - Add status LED if available
+# Опционально - Добавьте светодиод состояния, если доступен
 status_led:
   pin: GPIO2
